fix spacing on quiz bubbles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -399,8 +399,8 @@ a:visited { color: inherit; text-decoration: none }
   justify-content: center;
 }
 .labels label {
-  margin-right: 7px;
-  margin-left: 7px;
+  margin-right: 2vw;
+  margin-left: 2vw;
   position: relative;
   display: flex;
   flex-direction: column;
